# SeriousProton

./: CMakeLists.txt
.github/workflows/: cmake.yml
src/: P.h  PlayerController.cpp  PlayerController.h  Renderable.h  clipboard.cpp  collisionable.cpp  engine.cpp  engine.h  gameEntity.h  input.cpp  input.h  multiplayer.cpp  multiplayer_client.cpp  networkRecorder.cpp  networkRecorder.h  postProcessManager.cpp  postProcessManager.h  sfml2sdl.cpp  sfml2sdl.h  shaderManager.cpp  shaderManager.h  textureManager.cpp  textureManager.h  windowManager.cpp  windowManager.h
src/Box2D/: CMakeLists.txt
src/GL/: CMakeLists.txt  glad.c  glad.h
src/GL/debug/: glad.c
src/GL/debug/GL/: glad.h
src/GL/release/: glad.c
src/GL/release/GL/: glad.h
src/SFML/: CMakeLists.txt  main.cpp
src/SFML/Graphics/: BlendMode.hpp  CircleShape.hpp  Color.hpp  Drawable.hpp  Font.hpp  Glsl.hpp  Glyph.hpp  Image.hpp  Implementation.cpp  PrimitiveType.hpp  Rect.hpp  RectangleShape.hpp  RenderStates.hpp  RenderTarget.hpp  RenderTexture.hpp  RenderWindow.hpp  Shader.hpp  Shape.hpp  Sprite.hpp  Text.hpp  Texture.hpp  Transform.hpp  Transformable.hpp  Vertex.hpp  VertexArray.hpp  View.hpp
src/SFML/Window/: ContextSettings.hpp  Implementation.cpp  VideoMode.hpp  WindowStyle.hpp
src/SFML/stb/: dds-ktx.h
src/lua/: CMakeLists.txt
